Basic UI implementation; needs improvements